# threading-with-boost

./: CMakeLists.txt  main.cpp  readme.md
include/: classWorker.h  classWorkerAdvanced.h  functorWorker.h
src/: classWorker.cpp  classWorkerAdvanced.cpp  functorWorker.cpp
